<resources>
    <string name="app_name">PCT System</string>
    <string name="app_name_first">PCT</string>
    <string name="app_name_last">System</string>


    <string name="signInWelcomeMessage">Welcome Back!</string>
    <string name="signInMainMessage">Please login to your account.</string>
    <string name="nationalId">National ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newUserMessage">Don\'t have an account? Register now</string>
    <string name="registerNow">Register now</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Mobile</string>
    <string name="confirm_Password">Confirm Password</string>
    <string name="signUpWelcomeMessage">Get Started!</string>
    <string name="signUpMainMessage">Please complete the fields</string>
    <string name="backToLoginMessage">Have an account? Login</string>
    <string name="signup">Sign up</string>
    <string name="error">Error!</string>
    <string name="msgSomethingWentWrong">Something went wrong. Please try again later.</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="covid19">Covid-19</string>
    <string name="information">Information</string>
    <string name="faction">Faction</string>
    <string name="corona_test">Corona Test</string>
    <string name="showMoreUnderLine"><u>Show More</u></string>
    <string name="profile">Profile</string>
    <string name="label_report_header">Covid-19 Test Requests</string>

    <string name="familyErrorMessage">error happen while fetching family members!</string>
    <string name="emptyFamilyMessage">No contacts were added.</string>
    <string name="msgMemberFamilyAddedSuccessfully">%1$s added successfully</string>
    <string name="reportErrorMessage">error happen while fetching reports!</string>
    <string name="reportDetailsErrorMessage">error happen while fetching report details!</string>
    <string name="emptyReportMessage">No reports yet.</string>
    <string name="emptyListMessage">empty list!</string>
    <string name="profileWelcomeMessage">Hello %1$s</string>
    <string name="profileCovidStatus">Covid-19 status is %1$s</string>
    <string name="profileWelcomeHelloLabel">Hello</string>
    <string name="profileMessage">Keep Your life healthy</string>
    <string name="save">Save</string>


    <string name="failedGetProfileError">error happen while loading profile</string>
    <string name="profileUpdatedSuccessfullyMessage">Profile updated successfully!</string>
    <string name="emptyFields">Some fields are empty!</string>
    <string name="invalidNationalId">Invalid national id</string>
    <string name="invalidEmailAddress">Invalid email address</string>
    <string name="retry">Retry</string>
    <string name="result_title_negative">Yay! You are safe!</string>
    <string name="callDoctorLabel">Call Doctor</string>
    <string name="ignoreAnyWayLabel">Ignore anyway</string>
    <string name="result_title_positive">"Oh! We suspect that you have symptoms of Covid-19"</string>
    <string name="newAnalysis">Add New Analysis</string>
    <string name="analyticsErrorMessage">error happen while fetching analytics!</string>
    <string name="emptyAnalyticsMessage">No Analytics Yet.</string>
    <string name="analyticsUploadSuccessfulMessage">Your report uploaded successfully.</string>
    <string name="accessStorageAndCameraErrorMessage">Permission Denied!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="email">Email</string>
    <string name="passwordMissMatchMsg">Password and confirm password are not the same</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="passwordLengthErrorMsg">password length must be more than 6 characters</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="coughQuestion">Do you have cough?</string>
    <string name="diarrheaQuestion">Do you have diarrhea?</string>
    <string name="dyspneaQuestion">Do you have dyspnea?</string>
    <string name="feverQuestion">Do you have fever?</string>
    <string name="submit">Submit</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="uploadReportSuccessfully">Report uploaded successfully</string>
    <string name="gender">Gender</string>
    <string name="noChangesFoundMsg">No changes found!</string>
    <string name="callDoctorMsg">We suggest you this doctor to contact with</string>
    <string name="relation">Relation</string>
    <string name="label_family_members_header">Family Members</string>
    <string name="labelAddNewFamilyMember">Add new Person</string>
    <string name="relationType">Relation (Son, Brother, Mother…)</string>
    <string name="labelSelectFamilyMemberGender">Select Family Member Gender</string>
    <string name="labelShowDetails">Show Details</string>
    <string name="labelDirectContacts">Direct Contacts</string>
    <string name="label_family_members_description">Direct contacts are persons who have been in direct contact with the patient in house, school or work during a period of four days prior to the onset of symptoms and up to seven days after its onset.</string>
</resources>