<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="16dp"
        tools:context=".modules.main.home.presentation.view.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.ksa.unticovid.modules.core.presentation.custom_view.DisplayInfoView
                android:id="@+id/item_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_image="@drawable/ic_information"
                app:item_label="@string/information" />

            <com.ksa.unticovid.modules.core.presentation.custom_view.DisplayInfoView
                android:id="@+id/item_faction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_image="@drawable/ic_faction"
                app:item_label="@string/faction" />

            <com.ksa.unticovid.modules.core.presentation.custom_view.DisplayInfoView
                android:id="@+id/item_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_image="@drawable/ic_question_mark"
                app:item_label="@string/corona_test" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>