<?xml version="1.0" encoding="utf-8"?>
<cn.enjoytoday.shadow.ShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shadowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    app:bgColor="@color/white"
    app:blurRadius="8dp"
    android:paddingHorizontal="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:shadowColor="#192c384f"
    app:shadowRadius="27.8dp"
    app:xOffset="0dp"
    app:yOffset="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid19"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/showMoreUnderLine"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="viewStart"
                android:textSize="11sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/ic_history"
           />

    </LinearLayout>

</cn.enjoytoday.shadow.ShadowLayout>