<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.family.presentation.view.FamilyMembersActivity">


        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar_back_light" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/StylePageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/labelDirectContacts"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            style="@style/StylePageSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_family_members_description"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_add_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/dashed_border"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/labelAddNewFamilyMember"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/swContainer"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_member">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_family"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_family_member" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include
            android:id="@+id/layout_state_view"
            layout="@layout/layout_state_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_member"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>